# cpptest

./: CMakeLists.txt  README.md
include/: test_protobuf.h
protobuf/: CMakeLists.txt  README.md  demo.pb.cc  demo.pb.h  demo.proto  demo_pb2.py
src/: main.cc
src/common/: func.cc  func2.cc  read_protobuf.cc  write_protobuf.cc
src/py_protobuf/: README.md  read_protobuf.py  write_protobuf.py
